# drzero

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  convert.sh  evaluate_solver.sh  iter1_challenger.sh  iter1_gen_data.sh  iter1_solver.sh  iter2_challenger.sh  iter2_gen_data.sh  iter2_solver.sh  iter3_challenger.sh  iter3_gen_data.sh  iter3_solver.sh  process_train.py  pyproject.toml  run_multiround_training.sh  setup_qwen36_judge.sh  setup_retriever.sh  skills-lock.json  start_training_tmux.sh  update_iteration_state.sh
config/: iteration_orchestrator.yaml  search_multiturn_grpo.yaml  search_tool_config.yaml
deploy/: current.env.example  local-all.env.example  remote-services.env.example
docs/: plan.md  plan_codex.md  plan_implementation.md  plan_lkc_v1.md  training-performance-20260716.md
environments/qwen36-judge/: pyproject.toml
iterations/iter_1/: state.json
scripts/: analyze_training_timing.py  build_faiss_gpu.sh  check_deployment_services.sh  filter_validation_set.py  init_deployment.sh  load_deployment_config.sh  load_run_namespace.sh  summarize_solver_evaluation.py  wait_for_model_server.sh
search/: retrieval_server.py
tests/: test_deployment_config.py  test_filter_validation_set.py  test_iteration_pipeline.py  test_qwen36_setup.py  test_training_runtime_regressions.py
verl/: prompts.py
verl/custom_reward/: format_scoring.py  reward_function.py  reward_rollout.py
verl/iteration/: __init__.py  cli.py  core.py  dataset.py  generation.py  models.py  orchestrator.py  repair_candidates.py
verl/single_controller/ray/: base.py
verl/tools/: schemas.py  search_tool.py
verl/tools/utils/: tool_registry.py
verl/trainer/: main_generation.py  main_ppo.py
verl/trainer/ppo/: ray_trainer.py  reward.py
verl/utils/: asyncio_utils.py
verl/utils/dataset/: rl_dataset.py
verl/workers/rollout/: schemas.py
(+3 files in other folders)
